handle log properly
* the console now conditionnaly display main/gc/more... depending on the script values
* jetty glu script now uses a separate gc log